@@ -30,7 +30,7 @@ xfontsel_SOURCES =	\
         ULabelP.h \
         xfontsel.c
 
-appman_SOURCES = \
+appman_PRE = \
         xfontsel.man
 
 # App default files  (*.ad)
@@ -55,9 +55,9 @@ CLEANFILES = $(APPDEFAULTFILES)
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA)
 
 SED = sed
